--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,7 +49,7 @@
 
 <script>
     // 👇 METS TON IP ICI (Garde le http:// et les guillemets)
-    const API_URL = "http://100.25.117.29/"; 
+    const API_URL = "http://100.25.117.29"; 
 
     async function scanCode() {
         const fileInput = document.getElementById('fileInput');
